stylesheet.less
/* ... */
fieldset {
    padding: 1.5em 0;
}

.signupform fieldset button, fieldset button {
    height: 45px;
}

.signupform fieldset input {
    width: 70%
}

.widget.profile form button {
    padding-top: 8px;
}

/* ===============================
  8. Back to Top
   =============================== */

.back-to-top {
	text-align: right;
	padding-top: 30px;

		a {
			display: block;
			font-family: @font-swatch5-font-family;
			color: @color-swatch5;
			&:after {
				content: "";			
				width: 0; 
				height: 0; 
				border-left: 5px solid transparent;
				border-right: 5px solid transparent;
				border-bottom: 5px solid @color-swatch5;
				font-size: 0;
				line-height: 0;
				position: relative;
				top: -8px;
				margin-left: 10px;
			}
		}
		@media @mobile {
			text-align: center;
			padding: 30px 0;
		}

}	/* end back-to-top */

/* ===============================
   PRINT STYLES 
   =============================== */
.print-mixin {
    .menu .menu-header h1:before, .menu .menu-section-header h1:before, .menu .menu-header h1:after, .menu .menu-section-header h1:after,
    .menu .menu-subsection-header:before,
    .menu .menu-items li.menu-item-promoted:before {
	    display: none;
    }
    .menu .menu-items li.menu-item-promoted .inner-item h3:before, .menu .menu-items li.menu-item-promoted .inner-item h3:after {
	    color: #b9b9b9;
    }
    .menu .menu-items li.menu-item-promoted,
    .menu-subsection {
	    border: 1px solid #b9b9b9;
    }
    #backtotop {
	    display: none;
    }
}
 
@media print {
    .print-mixin;
}
 
.bk-print {
    .print-mixin;
}

